--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ aioitertools==0.8.0
 aiosignal==1.2.0
 alabaster==0.7.13
 altair==4.2.0
-anaconda-client==1.11.0
+anaconda-client
 anyio==3.7.1
 appdirs==1.4.4
 argon2-cffi==21.3.0
