--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ argon2-cffi==21.3.0
 argon2-cffi-bindings==21.2.0
 arrow==1.2.3
 astroid==2.14.1
-astropy==5.1
+astropy==5.3
 asttokens==2.0.5
 async-lru==2.0.0
 atomicwrites==1.4.0
@@ -155,7 +155,7 @@ scikit-image==0.19.3
 scikit-learn==1.0.2
 scipy==1.14.0
 seaborn==0.11.2
-setuptools==74.0.0
+setuptools>=65.5.1
 six==1.16.0
 sniffio==1.2.0
 soupsieve==2.3.2.post1
