--- a/requirements.txt
+++ b/requirements.txt
@@ -119,7 +119,7 @@ nltk==3.6.7
 notebook==6.4.11
 numba==0.55.1
 numexpr==2.8.1
-numpy==1.26.4
+numpy>=1.19.5
 numpydoc==1.4.0
 openai==0.27.0
 opencv-contrib-python==4.10.0.84
