--- a/requirements.txt
+++ b/requirements.txt
@@ -1,190 +1,190 @@
 absl-py==2.1.0
-aiobotocore==2.4.0
+aiobotocore==1.4.2
 aiohttp==3.8.5
-aioitertools==0.11.0
-aiosignal==1.3.1
+aioitertools==0.8.0
+aiosignal==1.2.0
 alabaster==0.7.13
-altair==5.0.1
-anaconda-client==1.11.0
-anyio==4.0.0
+altair==4.2.0
+anaconda-client==1.2.2
+anyio==3.7.1
 appdirs==1.4.4
-argon2-cffi==23.1.0
+argon2-cffi==21.3.0
 argon2-cffi-bindings==21.2.0
 arrow==1.2.3
-astroid==2.15.9
-astropy==5.3.1
-asttokens==2.4.0
-async-lru==2.0.4
+astroid==2.14.1
+astropy==5.3
+asttokens==2.0.5
+async-lru==2.0.0
 atomicwrites==1.4.0
 attrs==23.2.0
-Automat==22.10.0
-autopep8==2.0.4
-Babel==2.13.1
-bcrypt==4.0.1
-beautifulsoup4==4.12.2
-black==23.9.1
-bleach==6.1.0
-blinker==1.6.2
-bokeh==3.2.2
-boltons==23.0.0
-botocore==1.31.6
-Bottleneck==1.3.8
-Brotli==1.1.0
-cachetools==5.3.1
+Automat==20.2.0
+autopep8==1.6.0
+Babel==2.9.1
+bcrypt==3.2.0
+beautifulsoup4==4.10.0
+black==22.3.0
+bleach==5.0.0
+blinker==1.5
+bokeh==2.4.3
+boltons==21.0.0
+botocore==1.20.43
+Bottleneck==1.3.2
+Brotli==1.0.9
+cachetools==4.2.2
 certifi==2024.7.4
-cffi==1.15.1
+cffi==1.16.0
 charset-normalizer==3.3.2
-click==8.1.7
-cloudpickle==2.6.1
+click==8.0.1
+cloudpickle==2.0.0
 colorama==0.4.6
 cycler==0.12.1
-dask==2023.9.1
-datashader==0.14.4
-debugpy==1.8.0
+dask==2022.3.0
+datashader==0.13.0
+debugpy==1.5.1
 decorator==5.1.1
 defusedxml==0.7.1
-dill==0.3.7
-distributed==2023.9.1
-docutils==0.19
+dill==0.3.5
+distributed==2022.3.0
+docutils==0.18.1
 et-xmlfile==1.1.0
-executing==1.2.0
-fastjsonschema==2.18.1
+executing==0.8.0
+fastjsonschema==2.15.0
 filelock==3.15.4
-flake8==6.1.0
-flatbuffers==23.3.3
-fonttools==4.43.0
-frozendict==2.3.8
-frozenlist==1.4.0
+flake8==3.9.2
+flatbuffers==2.0
+fonttools==4.28.5
+frozendict==2.3.3
+frozenlist==1.3.0
 fsspec==2024.6.1
-gensim==4.3.1
-gitdb==4.1.0
-GitPython==3.1.36
-greenlet==3.0.1
-h5py==3.10.0
+gensim==4.2.0
+gitdb==4.0.9
+GitPython==3.1.27
+greenlet==1.1.2
+h5py==3.6.0
 HeapDict==1.0.1
-holoviews==1.17.1
-httpcore==1.0.2
-httpx==0.24.1
-hvplot==0.8.0
+holoviews==1.14.5
+httpcore==0.14.3
+httpx==0.23.0
+hvplot==0.7.3
 hyperlink==21.0.0
 idna==3.7
-imageio==2.31.0
-imbalanced-learn==1.1.0
-importlib-metadata==6.8.0
+imageio==2.9.0
+imbalanced-learn==0.9.1
+importlib-metadata==4.8.2
 incremental==21.3.0
 inflection==0.5.1
-ipykernel==6.25.0
-ipython==8.16.1
+ipykernel==6.10.0
+ipython==8.5.0
 ipython-genutils==0.2.0
-ipywidgets==8.1.1
-isort==5.12.0
+ipywidgets==7.6.5
+isort==5.9.3
 itsdangerous==2.1.2
 jax==0.4.30
 jaxlib==0.4.30
-jedi==0.19.0
-Jinja2==3.1.2
-joblib==1.3.2
-jsonschema==4.19.0
+jedi==0.18.2
+Jinja2==3.1.4
+joblib==1.1.0
+jsonschema==4.7.2
 jupyter==1.0.0
-jupyter-console==6.5.1
-jupyter_client==8.3.0
-jupyter_core==6.3.0
+jupyter-console==6.4.3
+jupyter_client==7.1.2
+jupyter_core==4.10.0
 kiwisolver==1.4.5
-lazy-object-proxy==1.9.0
-llvmlite==0.41.1
+lazy-object-proxy==1.6.0
+llvmlite==0.38.0
 locket==1.0.0
-lxml==4.9.3
-lz4==4.3.2
-Markdown==3.5.2
+lxml==4.9.0
+lz4==4.0.0
+Markdown==3.3.6
 MarkupSafe==2.1.5
 matplotlib==3.9.1
-mccabe==0.7.0
+mccabe==0.6.1
 mediapipe==0.10.14
-mistune==3.0.1
+mistune==2.0.2
 mkl-fft==1.3.1
-mkl-random==1.3.2
+mkl-random==1.2.2
 mkl-service==2.4.0
-ml-dtypes==0.4.1
-msgpack==1.0.5
-multidict==6.0.4
-multipledispatch==0.7.0
-mypy==1.5.1
+ml-dtypes==0.4.0
+msgpack==1.0.3
+multidict==5.1.0
+multipledispatch==0.6.0
+mypy==0.991
 navigator-updater==0.2.1
-nbclient==0.8.0
-nbconvert==7.10.2
-nbformat==5.9.1
-nest-asyncio==1.5.8
+nbclient==0.5.13
+nbconvert==6.4.5
+nbformat==5.2.0
+nest-asyncio==1.5.6
 networkx==3.3
-nltk==3.9.0
-notebook==7.1.0
-numba==0.58.1
-numexpr==2.9.3
+nltk==3.6.7
+notebook==6.4.11
+numba==0.55.1
+numexpr==2.8.1
 numpy==1.26.4
-numpydoc==1.6.0
-openai==0.28.0
+numpydoc==1.4.0
+openai==0.27.0
 opencv-contrib-python==4.10.0.84
 opencv-python==4.10.0.84
-opt-einsum==3.4.0
-overrides==7.4
+opt-einsum==3.3.0
+overrides==7.3
 packaging==24.1
 pandas==2.2.2
 pillow==10.4.0
-plotly==5.18.0
-pluggy==1.3.0
-prompt-toolkit==3.0.39
+plotly==5.6.0
+pluggy==0.13.1
+prompt-toolkit==3.0.29
 protobuf==4.25.3
-psutil==6.1.0
-pyasn1==0.5.1
-pyasn1-modules==0.3.1
-pycodestyle==2.10.0
-pycparser==2.23
-pyflakes==3.1.1
+psutil==6.0.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycodestyle==2.7.0
+pycparser==2.22
+pyflakes==2.3.1
 pygame==2.6.0
-Pygments==2.16.1
-PyJWT==2.8.0
-pylint==3.0.0
+Pygments==2.13.0
+PyJWT==2.3.0
+pylint==2.13.9
 pyparsing==3.1.2
-PyQt5==5.15.12
-PyQtWebEngine==5.15.10
-pytest==7.5.1
-python-dateutil==2.9.0
+PyQt5==5.15.11
+PyQtWebEngine==5.15.6
+pytest==7.1.2
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 PyYAML==6.0.2
 requests==2.32.3
-scikit-image==0.21.0
-scikit-learn==1.4.2
+scikit-image==0.19.3
+scikit-learn==1.0.2
 scipy==1.14.0
-seaborn==0.13.0
-setuptools==75.1.0
+seaborn==0.11.2
+setuptools>=65.5.1
 six==1.16.0
-sniffio==1.3.0
-soupsieve==2.5
-SQLAlchemy==2.0.23
-statsmodels==1.0.1
-streamlit==1.26.0
-tables==3.8.0
-tabulate==0.9.0
-tenacity==8.2.3
-terminado==0.17.1
-text-unidecode==1.4
-threadpoolctl==3.2.0
-tifffile==2024.8.31
-tldextract==3.4.4
+sniffio==1.2.0
+soupsieve==2.3.2.post1
+SQLAlchemy==1.4.36
+statsmodels==0.13.2
+streamlit==1.10.0
+tables==3.6.1
+tabulate==0.8.9
+tenacity==8.0.1
+terminado==0.13.3
+text-unidecode==1.3
+threadpoolctl==3.0.0
+tifffile==2021.10.10
+tldextract==3.2.0
 toml==0.10.2
-toolz==1.0.0
+toolz==0.11.2
 torch==2.4.0
 torchaudio==2.4.0
 torchvision==0.19.0
-tornado==6.3.3
+tornado==6.1
 tqdm==4.66.5
-traitlets==5.12.0
-typing_extensions==4.8.0
+traitlets==5.1.1
+typing_extensions==4.12.2
 tzdata==2024.1
 urllib3==2.2.2
-watchdog==3.0.0
-wcwidth==0.2.7
-websocket-client==1.6.3
-Werkzeug==2.4.0
-zipp==3.16.3
-wheel==0.44.0
-cython==3.0.2
+watchdog==2.1.7
+wcwidth==0.2.5
+websocket-client==1.3.1
+Werkzeug==2.1.2
+zipp==3.7.0
+wheel
+cython
